--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body {
-    background-color: bisque
+#container {
+    background-color: bisque;
+    display: grid;
+    height: 100vh;
+}
+
+.grid {
+    border: 1px solid black;
+    height: auto
 }
