--- a/style.css
+++ b/style.css
@@ -60,3 +60,26 @@ button {
 .score {
     font-size: 24px;
 }
+
+.markInputs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    place-items: center;
+}
+
+.markInputs>div {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+#player1-input,
+#player2-input {
+    width: 50px;
+    height: 50px;
+    font-size: 40px;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.13);
+    background-color: rgba(255, 255, 255, 0.295);
+}
