--- a/style.css
+++ b/style.css
@@ -83,3 +83,14 @@ button {
     border: 1px solid rgba(0, 0, 0, 0.13);
     background-color: rgba(255, 255, 255, 0.295);
 }
+
+#slider {
+    width: 200px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.781);
+    margin-bottom: 20px;
+    outline: solid 1px rgba(0, 0, 0, 0.13);
+}
