--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: rgb(222, 240, 255);
+    transition: background-color 0.3s ease-in-out;
+
 }
 
 main {
@@ -42,6 +44,8 @@ button {
     justify-content: center;
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.466);
+    transition: color 0.2s ease-in-out;
+    color: rgba(0, 0, 0, 0);
 }
 
 .notice {
